<resources>
    <string name="app_name">ListViewExample</string>
    <string name="btn_load_info">LOAD</string>
    <string name="tv_fruits">Select an operating system</string>
    <string name="rb_windows7">Windows 7</string>
    <string name="rb_windows10">Windows 10</string>
    <string name="rb_windows11">Windows 11</string>
    <string name="rb_ubuntu">Ubuntu</string>
    <string name="rb_red_hat">RedHat</string>
    <string name="rb_others">Others</string>
    <string name="tv_data">Data loaded</string>
    <string name="tv_operating_system">Operating system:</string>
    <string name="tv_version">Version:</string>
    <string name="btn_return">RETURN</string>
    <string name="tv_aux">Text View</string>
</resources>