<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/rg_windows_versions"
        android:layout_width="329dp"
        android:layout_height="53dp"
        android:layout_marginTop="17dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv_fruits">

        <RadioButton
            android:id="@+id/rb_windows7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text="@string/rb_windows7" />

        <RadioButton
            android:id="@+id/rb_windows10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_windows10" />

        <RadioButton
            android:id="@+id/rb_windows11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_windows11" />

    </RadioGroup>

    <ListView
        android:id="@+id/lv_fruits"
        android:layout_width="411dp"
        android:layout_height="143dp"
        android:layout_marginTop="104dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_load_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="24dp"
        android:onClick="loadInfo"
        android:text="@string/btn_load_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_linux_versions" />

    <TextView
        android:id="@+id/tv_selecct_fruit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:text="@string/tv_fruits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_linux_versions"
        android:layout_width="242dp"
        android:layout_height="53dp"
        android:layout_marginTop="11dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_windows_versions">

        <RadioButton
            android:id="@+id/rb_ubuntu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_ubuntu" />

        <RadioButton
            android:id="@+id/rb_red_hat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/rb_red_hat" />

        <RadioButton
            android:id="@+id/rb__linux_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/rb_others" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>